--- a/shop/templates/admin/register.html
+++ b/shop/templates/admin/register.html
@@ -16,7 +16,7 @@
         {{ render_field(form.confirm) }}
         <input type="file" name="photo">        
       </div>
-      <p><input type=submit value=Register class="btn btn-info"></p>[]
+      <p><input type=submit value=Register class="btn btn-info"></p>
     </form>
 
 </div>
