--- a/shop/templates/admin/brand.html
+++ b/shop/templates/admin/brand.html
@@ -4,16 +4,16 @@
 
 <div class="container">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/admin">Admin</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/admin">Home <span class="sr-only">(current)</span></a>
       </li>
-     <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="/brands">Brands</a>
       </li>
       <li class="nav-item">
@@ -38,27 +38,31 @@
     <table class="table table-sm table-condensed table-striped">
         <thead>
             <th>Sr</th>
-            <th>Product</th>
-            <th>Price</th>
-            <th>Discount</th>
-            <th>Brand</th>
-            <th>Image</th>
+            <th>Name</th>
+
             <th>Edit</th>
             <th>Delete</th>
         </thead>
         <tbody>
-            {% for product in products %}
+            {% if brands %}
+            {% for brand in brands %}
             <tr>
                 <td>{{loop.index}}</td>
-                <td>{{product.name}}</td>
-                <td>{{product.price}}</td>
-                <td>{{product.discount}}</td>
-                <td>{{product.brand.name}}</td>
-                <td><img src="{{url_for('static', filename='images/' + product.image_1)}}" width="50" height="40"></td>
-                <td>Edit</td>
-                <td>Delete</td>
+                <td>{{brand.name}}</td>
+                <td><a href="" class="btn btn-sm btn-outline-info">Edit</a></td>
+                <td><a href="" class="btn btn-sm btn-outline-danger">Delete</a></td>
             </tr>
             {% endfor %}
+            {% else %}
+            {% for category in categories %}
+            <tr>
+                <td>{{loop.index}}</td>
+                <td>{{category.name}}</td>
+                <td><a href="" class="btn btn-sm btn-outline-info">Edit</a></td>
+                <td><a href="" class="btn btn-sm btn-outline-info">Delete</a></td>
+            </tr>
+            {% endfor %}
+            {% endif %}
         </tbody>
     </table>
 
