--- a/shop/templates/admin/index.html
+++ b/shop/templates/admin/index.html
@@ -1,6 +1,5 @@
 {% extends 'layout.html' %}
 {% block content %}
- {% include '_messages.html' %}
 
 <div class="container">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,6 +34,9 @@
 </div>
 
 <div class="container mt-5">
+    <div class="container">
+ {% include '_messages.html' %}
+    </div>
     <table class="table table-sm table-condensed table-striped">
         <thead>
             <th>Sr</th>
@@ -55,8 +57,8 @@
                 <td>{{product.discount}}</td>
                 <td>{{product.brand.name}}</td>
                 <td><img src="{{url_for('static', filename='images/' + product.image_1)}}" width="50" height="40"></td>
-                <td>Edit</td>
-                <td>Delete</td>
+                <td><a href="{{url_for('updateproduct', id=product.id)}}" class='btn btn-info btn-sm'>Edit</a></td>
+                <td><a href="" class='btn btn-danger btn-sm'>Delete</a></td>
             </tr>
             {% endfor %}
         </tbody>
