--- a/shop/templates/products/updatebrand.html
+++ b/shop/templates/products/updatebrand.html
@@ -13,7 +13,7 @@
                 <input type="text" name="brand" class="form-control" value="{{updatebrand.name}}">
                 <input type="submit" value="Update brand" class="btn btn-info mt-2">
              </form>
-            <a href="{{url_for('brands')}}" class="btn btn-warning" style="margin-top: -65x; margin-left:140 px">Cancel</a>
+            <a href="{{url_for('brands')}}" class="btn btn-warning" style="margin-top: -65px; margin-left:140px">Cancel</a>
             {% else %}
 
             <h1 class="text-center mt-5"> Update a category</h1>
@@ -21,7 +21,7 @@
                 <input type="text" name="category" class="form-control" value="{{updatecat.name}}">
                 <input type="submit" value="Update category" class="btn btn-info mt-2">
              </form>
-            <a href="{{url_for('category')}}" class="btn btn-warning" style="margin-top: -65x; margin-left: 140 px">Cancel</a>
+            <a href="{{url_for('category')}}" class="btn btn-warning" style="margin-top: -65px; margin-left: 150px">Cancel</a>
             {% endif %}
         </div>
 
