--- a/shop/templates/admin/brand.html
+++ b/shop/templates/admin/brand.html
@@ -33,6 +33,7 @@
   </div>
 </nav>
 </div>
+<!--==========END NAVBAR ==============-->
 
 <div class="container mt-5">
     <table class="table table-sm table-condensed table-striped">
@@ -50,8 +51,37 @@
                 <td>{{loop.index}}</td>
                 <td>{{brand.name}}</td>
                 <td><a href="{{url_for('updatebrand', id=brand.id)}}" class="btn btn-sm btn-info">Edit</a></td>
-                <td><a href="" class="btn btn-sm btn-outline-danger">Delete</a></td>
-            </tr>
+ <td><button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal-{{brand.id}}">
+              Delete
+            </button></td>
+          </tr>
+
+
+<!--============= MODEL ===================-->
+
+<div class="modal fade" id="exampleModal-{{brand.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ brand.name }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="text-danger">Are you Sure that you want to delete this brand ({{ brand.name }}) </p>
+       </div>
+       <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <form action="{{url_for('deletebrand',id=brand.id)}}" method="post">
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!--==============MODEL ===================-->
             {% endfor %}
             {% else %}
             {% for category in categories %}
@@ -59,8 +89,36 @@
                 <td>{{loop.index}}</td>
                 <td>{{category.name}}</td>
                 <td><a href="{{url_for('updatecat', id=category.id)}}" class="btn btn-sm btn-outline-info">Edit</a></td>
-                <td><a href="" class="btn btn-sm btn-outline-info">Delete</a></td>
+            <td><button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal-{{category.id}}">
+              Delete</button></td>
             </tr>
+
+
+            <!--============= MODEL ===================-->
+
+<div class="modal fade" id="exampleModal-{{category.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ category.name }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="text-danger">Are you Sure that you want to delete this category ({{ category.name }}) </p>
+       </div>
+       <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <form action="{{url_for('deletecategory',id=category.id)}}" method="post">
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!--==============MODEL ===================-->
             {% endfor %}
             {% endif %}
         </tbody>
