--- a/shop/templates/admin/index.html
+++ b/shop/templates/admin/index.html
@@ -58,8 +58,31 @@
                 <td>{{product.brand.name}}</td>
                 <td><img src="{{url_for('static', filename='images/' + product.image_1)}}" width="50" height="40"></td>
                 <td><a href="{{url_for('updateproduct', id=product.id)}}" class='btn btn-info btn-sm'>Edit</a></td>
-                <td><a href="" class='btn btn-danger btn-sm'>Delete</a></td>
+                <td><button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#exampleModal-{{product.id}}">Delete</button></td>
             </tr>
+
+            <!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal-{{product.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{product.name}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="text-danger">Are you Sure that you want to delete this product  ({{ product.name }})</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning btn-sm" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger btn-sm" >Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
             {% endfor %}
         </tbody>
     </table>
