--- a/shop/templates/admin/index.html
+++ b/shop/templates/admin/index.html
@@ -74,11 +74,16 @@
         </button>
       </div>
       <div class="modal-body">
-        <p class="text-danger">Are you Sure that you want to delete this product  ({{ product.name }})</p>
+        <p class="text-danger">Are you Sure that you want to delete this product {{ product.name }}</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-warning btn-sm" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger btn-sm" >Delete</button>
+          <form action="{{url_for('deleteproduct', id=product.id)}}" method="post">
+
+              <button type="submit" class="btn btn-danger btn-sm" >Delete</button>
+
+          </form>
+
       </div>
     </div>
   </div>
