--- a/shop/templates/products/index.html
+++ b/shop/templates/products/index.html
@@ -37,7 +37,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Cart ({{session['Shoppingcart']|length}})</a>
+        <a href="{{url_for('getCart')}}" class="nav-link"> Cart ({{ session['Shoppingcart']|length }}) </a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
