--- a/shop/templates/products/carts.html
+++ b/shop/templates/products/carts.html
@@ -1,40 +1,71 @@
 {% extends 'layout.html' %}
-{{session['Shoppingcart']}}
-
 
 {% block content %}
+{% include 'navbar.html' %}
 
-<div class="container">
+<div class="container mt-4">
     <div class="row">
+        <div class="col-md-12">
         <table class="table table-sm">
             <thead>
             <th>Sr</th>
+            <th>Image</th>
             <th>Name</th>
             <th>Color</th>
             <th>Price</th>
+            <th>Quantity</th>
             <th>Discount</th>
             <th>Subtotal</th>
             <th>Update</th>
-            <th>Delete</th>
+            <th>Remove</th>
             
             </thead>
             <tbody>
             {% for key, product in session['Shoppingcart'].items() %}
+            {% set discount = "%0.2f" | format((product.discount / 100 ) * product.price )%}
                 <tr>
                     <td>{{loop.index}}</td>
-                    <td>{{}}</td>
+                    <td><img src="{{url_for('static',filename='images/'+ product.image)}}" alt="{{product.name}}" width="50" height="45"></td>
+                    <td>{{product.name}}</td>
+                    <form action="">
+                    <td>
+                    {% set colors = product.colors.split(',') %}
+                    <label for="colors">Colors:</label>
+                  <select name="colors" id="colors">
+                      <option value="{{product.color}}">{{product.color|capitalize}}</option>
+                      {% for color in colors %}
+                      {% set col = color.split(':') %}
+                     <option value="{{col[0]}}">{{col[0]|capitalize }}</option>
+                     {% endfor %}
+                 </select>
+
+
+                    </td>
+                    <td> $ {{product.price}}</td>
+                    <td><input type="number" name="quantity" min="1" max="{{product.stock}}" value="{{product.quantity}}"></td>
+                    {% if product.discount > 0 %}
+                    <td>{{product.discount}} % is {{discount}} </td>
+                    {% else %}
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    {% endif %}
+                    {% set subtotal = product.quantity|int * product.price|float  %}
+                    <td> $ {{"%0.2f"| format((subtotal|float) - discount|float)}}</td>
+                    <td><a href="">Update</a></td>
+                    </form>
+                    <td><a href="">Remove</a></td>
             {% endfor %}
+            <tr>
+                <td></td>
+                <td><a href="/"> Continue shopping </a></td>
+                <td colspan="3"> <h4>Tax $: {{tax}}</h4></td>
+                <td colspan="4"> <h4>Grand Total $: {{grandtotal}}</h4></td>
+
+            </tr>
                 </tr>
             </tbody>
         </table>
         
     </div>
-    
+    </div>
 </div>
 {% endblock content %}
