--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -32,9 +32,32 @@
             {% endfor %}
         </div>
       </li>
+
+      {% if current_user.is_authenticated %}
+       <li class="nav-item">
+        <a href="{{url_for('customer_logout')}}" class="nav-link"> {{current_user.name}}  </a>
+      </li>
+      <li class="nav-item">
+        <a href="{{url_for('customer_logout')}}" class="nav-link"> Logout  </a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+      <a href="{{url_for('customerLogin')}}" class="nav-link"> Login  </a>
+
+      </li>
+
+      <li class="nav-item">
+      <a href="{{url_for('customer_register')}}" class="nav-link"> Sign in  </a>
+
+      </li>
+      {% endif %}
+
+
       <li class="nav-item">
         <a href="{{url_for('getCart')}}" class="nav-link"> Cart ({{ session['Shoppingcart']|length }}) </a>
       </li>
+
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
