--- a/shop/templates/admin/login.html
+++ b/shop/templates/admin/login.html
@@ -14,6 +14,7 @@
 <div class="text-center h1 text-danger"> Login </div>
     {% include '_messages.html' %}
     <form method="post" enctype="multipart/form-data">
+        {{ form.csrf_token }}
       <div>
         {{ render_field(form.email, class="form-control") }}
         {{ render_field(form.password, class="form-control") }}
