--- a/shop/templates/customer/order.html
+++ b/shop/templates/customer/order.html
@@ -7,6 +7,12 @@
      {% include '_messages.html' %}
     <div class="row">
         <div class="col-md-12">
+            Invoice: {{orders.invoice}} <br>
+            Status: {{orders.status}}<br>
+            Customer name: {{customer.name}}<br>
+            Customer e-mail: {{customer.email}}<br>
+            Customer contact: {{customer.contact}}<br>
+<br>
         <table class="table table-sm">
             <thead>
             <th>Sr</th>
@@ -23,13 +29,12 @@
             {% set discount = "%0.2f" | format((product.discount / 100 ) * product.price )%}
                 <tr>
                     <td>{{loop.index}}</td>
-                    <td><img src="{{url_for('static',filename='images/'+ product.image)}}" alt="{{product.name}}" width="50" height="45"></td>
                     <td>{{product.name}}</td>
                     <form action="{{url_for('updatecart', code=key)}}" method="post">
-                    <td {{product.color}}  </td>
+                    <td> {{product.color|capitalize}}</td>
 
-                    <td> ${{product.price}}</td>
-                    <td><input type="number" name="quantity" min="1" max="10" value="{{product.quantity}}"></td>
+                    <td> $ {{"%0.2f"|format(product.price)}}</td>
+                    <td>{{product.quantity}}</td>
                     {% if product.discount > 0 %}
                     <td>{{product.discount}} % is {{discount}} </td>
                     {% else %}
@@ -37,19 +42,18 @@
                     {% endif %}
                     {% set subtotal = product.quantity|int * product.price|float  %}
                     <td> $ {{"%0.2f"| format((subTotal|float) - discount|float)}}</td>
-                    <td><button type="submit" class="btn btn-sm btn-info"> Update</button> </td>
                     </form>
-                    <td><a href="{{url_for('deleteitem', id=key)}}" class="btn btn-sm btn-danger">Remove </a></td>
+
             {% endfor %}
              </table>
             <table class="table table-sm">
             <tr>
 
-                <td> <a href="{{url_for('get_order')}}" class="btn btn-success"> Order now </a> </td>
+                <td> <a href="#" class="btn btn-success"> Check out </a> </td>
                 <td width="35%"></td>
                 <td colspan="3"> <h4>Tax $: {{tax}}</h4></td>
                 <td colspan="4"> <h4>Grand Total $: {{grandTotal}}</h4></td>
-                <td><a href="{{url_for('clearcart')}}" class="btn btn-danger btn-sm float-right mr-4"> Clear cart</a></td>
+                <td><a href="#" class="btn btn-danger btn-sm float-right mr-4"> Get PDF </a></td>
 
             </tr>
                 </tr>
