--- a/shop/templates/products/updateproduct.html
+++ b/shop/templates/products/updateproduct.html
@@ -14,7 +14,7 @@
 
     {% from '_formhelpers.html' import render_field %}
 
-    <form method="POST" enctype="multipart/form-data">
+    <form method="POST" action="{{url_for('updateproduct')}}" enctype="multipart/form-data">
         {{ render_field(form.name, class="form-control", placeholder="Add product name") }}
         {{ render_field(form.price, class="form-control", placeholder="Add product price") }}
         {{ render_field(form.discount, class="form-control", placeholder="Add product discount") }}
@@ -39,9 +39,7 @@
 
         <div class="container">
             <div class="row">
-              <div class="col-md-4">{{ render_field(form.image_1, class="form-control") }}</div>
-                <div class="col-md-4">{{ render_field(form.image_2, class="form-control") }}</div>
-                <div class="col-md-4">{{ render_field(form.image_3, class="form-control") }}</div>
+              <div class="col-md-4">  {{ dropzone.create() }} </div>
             </div>
         </div>
 
